--- a/main.ipynb
+++ b/main.ipynb
@@ -1499,7 +1499,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urls_text_list = ['https://www.linkedin.com/pulse/transformers-without-pain-ibrahim-sobh-phd/','https://www.linkedin.com/pulse/transformers-without-pain-ibrahim-sobh-phd/']\n"
+    "urls_text_list = ['','https://www.linkedin.com/pulse/transformers-without-pain-ibrahim-sobh-phd/']\n",
+    "https://www.linkedin.com/pulse/transformers-without-pain-ibrahim-sobh-phd/"
    ]
   },
   {
